test/issue-3166/negative_tests/Issue3166JobNeg4-v1.0.qjob
# -*- mode: qore; indent-tabs-mode: nil -*-

# name: issue-3166neg4-job
# class-name: Issue3166JobNeg4
# version: 1.0
# desc: example job with configuration items
# author: Qore Technologies, s.r.o.
# schedule: * * * * *
# define-group: test: test interfaces
# define-group: regression: regression test group
# groups: test, regression

%new-style
%strict-args
%require-types
%enable-all-warnings

class Issue3166JobNeg4 inherits QorusJob {
    run() {
    }

    private *hash<string, hash<ConfigItemInfo>> getConfigItemsImpl() {
        return {
            "issue-3166-job-config-1": <ConfigItemInfo>{
                "type": "int",
                "default_value": 123,
                "description": "This is an example configuration item of type int",
                "strictly_local": True,
                "allowed_values": (123, 23, 123, 4, 1)
            },
        };
    }
}
# END